--- a/builder/Dockerfile.alpine-tracee-make
+++ b/builder/Dockerfile.alpine-tracee-make
@@ -24,7 +24,9 @@ RUN apk --no-cache update && \
     apk --no-cache add libelf-static && \
     apk --no-cache add zlib-static && \
     curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.48.0/opa_linux_amd64_static && \
-    chmod 755 /usr/bin/opa
+    chmod 755 /usr/bin/opa && \
+    GOROOT=/usr/lib/go GOPATH=$HOME/go go install github.com/incu6us/goimports-reviser/v3@latest && \
+    sudo cp $HOME/go/bin/goimports-reviser /usr/bin/
 
 # extra tools for testing things
 
