--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -5,6 +5,20 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - "!docs/**"
+      - "!deploy/**"
+      - "!packaging/**"
+      - "!**.yaml"
+      - "!**.md"
+      - "!**.txt"
+      - "!**.conf"
+      # override previous rules:
+      - "**.c"
+      - "**.h"
+      - "**.go"
+      - "**.sh"
+      - ".github/workflows/pr.yaml"
 concurrency:
   group: ${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
