--- a/packaging/Dockerfile.fedora-packaging
+++ b/packaging/Dockerfile.fedora-packaging
@@ -1,10 +1,6 @@
-################################################################################
-# INSTRUCTIONS
-################################################################################
 #
-# This Dockerfile is meant to create a tracee fedora pkgs building environment
+# Creates a building environment for tracee fedora pkgs.
 #
-################################################################################
 
 ARG version
 ARG uid=1000
