workflows: normalize format and syntax
1. Fix a few minor issues related to naming and schedule

--- a/.github/workflows/mkdocs-dev.yaml
+++ b/.github/workflows/mkdocs-dev.yaml
@@ -1,9 +1,12 @@
+#
+# On document changes and on demand: Deploy the dev documentatio
+#
 name: Deploy the dev documentation
 on:
   workflow_dispatch: {}
   push:
     paths:
-      - 'docs/**'
+      - "docs/**"
       - mkdocs.yml
     branches:
       - main
