--- a/.github/workflows/test-daily.yaml
+++ b/.github/workflows/test-daily.yaml
@@ -1,12 +1,13 @@
-name: Tests (DAILY)
-
+#
+# Daily Test: Test latest libbpfgo
+#
+name: Libbpfgo Test
 on:
   workflow_dispatch: {}
   schedule:
-    # Daily at 03:00
-    - cron: '0 3 * * *'
+    # Daily At 03:00
+    - cron: "0 3 * * *"
   workflow_call:
-
 jobs:
   compile-tracee:
     name: Test Latest libbpfgo
