--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -29,7 +29,7 @@ env:
   # ARM64 tests are disabled due to missing arm64 binaries in tracee-tester
   # https://github.com/aquasecurity/tracee/issues/2821
   ARM64_TESTS: "TRC-102 TRC-103 TRC-104 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
-  RHEL_ARM64_TESTS: "TRC-102 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
+  RHEL_ARM64_TESTS: "TRC-102 TRC-103 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
   NETTESTS: "IPv4 IPv6 TCP UDP ICMP ICMPv6 DNS HTTP"
   INSTTESTS: "VFS_WRITE FILE_MODIFICATION"
 jobs:
